--- a/Youtube Scraper.ipynb
+++ b/Youtube Scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 3,
    "id": "f1cb0426-5e8b-471e-889a-bb2fb9aa0585",
    "metadata": {},
    "outputs": [],
@@ -19,6 +19,10 @@
     "import time\n",
     "\n",
     "# Initialize the Firefox webdriver\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "driver = webdriver.Firefox()\n",
     "\n",
     "# Navigate to the webpage\n",
@@ -26,7 +30,7 @@
     "\n",
     "# Find all elements with the class name 'ytd-video-meta-block'\n",
     "wait = WebDriverWait(driver, 10)\n",
-    "element = wait.until(EC.presence_of_element_located((By.CSS_SELECTOR, \"html body ytd-app div#content.style-scope.ytd-app ytd-mini-guide-renderer.style-scope.ytd-app div#items.style-scope.ytd-mini-guide-renderer ytd-mini-guide-entry-renderer.style-scope.ytd-mini-guide-renderer a#endpoint.yt-simple-endpoint.style-scope.ytd-mini-guide-entry-renderer yt-icon#icon.guide-icon.style-scope.ytd-mini-guide-entry-renderer yt-icon-shape.style-scope.yt-icon icon-shape.yt-spec-icon-shape div\")))\n",
+    "element = wait.until(EC.presence_of_element_located((By.CSS_SELECTOR, \"ytd-mini-guide-entry-renderer.style-scope:nth-child(2) > a:nth-child(1)\")))\n",
     "\n",
     "\n",
     "driver.find_element(By.CSS_SELECTOR, \".ytd-mini-guide-renderer:nth-child(2) > #endpoint\").click()\n",
@@ -38,11 +42,27 @@
     "time.sleep(3)  # Wait for 3 seconds\n",
     "scrollable_element = driver.find_element(By.CSS_SELECTOR, \"html body ytd-app div#content.style-scope.ytd-app ytd-page-manager#page-manager.style-scope.ytd-app ytd-shorts.style-scope.ytd-page-manager div#shorts-container.style-scope.ytd-shorts\")\n",
     "driver.execute_script('arguments[0].scrollTop = arguments[0].scrollHeight;', scrollable_element)\n",
-    "time.sleep(3)  # Wait for 3 seconds\n",
+    "time.sleep(1)  # Wait for 3 seconds\n",
+    "scrollable_element = driver.find_element(By.CSS_SELECTOR, \"html body ytd-app div#content.style-scope.ytd-app ytd-page-manager#page-manager.style-scope.ytd-app ytd-shorts.style-scope.ytd-page-manager div#shorts-container.style-scope.ytd-shorts\")\n",
+    "driver.execute_script('arguments[0].scrollTop = arguments[0].scrollHeight;', scrollable_element)\n",
+    "\n",
+    "time.sleep(1)  # Wait for 3 seconds\n",
+    "driver.execute_script('arguments[0].scrollTop = arguments[0].scrollHeight;', scrollable_element)\n",
+    "time.sleep(3)  # Wait for 3 secondstime.sleep(3)  # Wait for 3 seconds\n",
     "scrollable_element = driver.find_element(By.CSS_SELECTOR, \"html body ytd-app div#content.style-scope.ytd-app ytd-page-manager#page-manager.style-scope.ytd-app ytd-shorts.style-scope.ytd-page-manager div#shorts-container.style-scope.ytd-shorts\")\n",
     "driver.execute_script('arguments[0].scrollTop = arguments[0].scrollHeight;', scrollable_element)\n",
     "\n",
     "time.sleep(3)  # Wait for 3 seconds\n",
+    "scrollable_element = driver.find_element(By.CSS_SELECTOR, \"html body ytd-app div#content.style-scope.ytd-app ytd-page-manager#page-manager.style-scope.ytd-app ytd-shorts.style-scope.ytd-page-manager div#shorts-container.style-scope.ytd-shorts\")\n",
+    "driver.execute_script('arguments[0].scrollTop = arguments[0].scrollHeight;', scrollable_element)\n",
+    "time.sleep(1)  # Wait for 3 seconds\n",
+    "scrollable_element = driver.find_element(By.CSS_SELECTOR, \"html body ytd-app div#content.style-scope.ytd-app ytd-page-manager#page-manager.style-scope.ytd-app ytd-shorts.style-scope.ytd-page-manager div#shorts-container.style-scope.ytd-shorts\")\n",
+    "driver.execute_script('arguments[0].scrollTop = arguments[0].scrollHeight;', scrollable_element)\n",
+    "\n",
+    "time.sleep(1)  # Wait for 3 seconds\n",
+    "driver.execute_script('arguments[0].scrollTop = arguments[0].scrollHeight;', scrollable_element)\n",
+    "time.sleep(3)  # Wait for 3 seconds\n",
+    "\n",
     "scrollable_element = driver.find_element(By.CSS_SELECTOR, \"html body ytd-app div#content.style-scope.ytd-app ytd-page-manager#page-manager.style-scope.ytd-app ytd-shorts.style-scope.ytd-page-manager div#shorts-container.style-scope.ytd-shorts\")\n",
     "driver.execute_script('arguments[0].scrollTop = arguments[0].scrollHeight;', scrollable_element)\n",
     "\n",
@@ -50,9 +70,26 @@
     "\n",
     "driver.find_element(By.CSS_SELECTOR, \".ytd-mini-guide-renderer:nth-child(1) > #endpoint\").click()\n",
     "# Iterate over the elements and get their CSS data\n",
-    "driver.refresh()\n",
     "time.sleep(3)  # Wait for 3 seconds\n",
-    "scrollable_element = driver.find_element(By.CSS_SELECTOR, \"div.ytd-app:nth-child(6)\")\n",
+    "\n",
+    "driver.find_element(By.CSS_SELECTOR, \".ytd-mini-guide-renderer:nth-child(2) > #endpoint\").click()\n",
+    "\n",
+    "time.sleep(3)  # Wait for 3 seconds\n",
+    "driver.find_element(By.CSS_SELECTOR, \".ytd-mini-guide-renderer:nth-child(1) > #endpoint\").click()\n",
+    "time.sleep(3)  # Wait for 3 seconds\n",
+    "\n",
+    "driver.find_element(By.CSS_SELECTOR, \".ytd-mini-guide-renderer:nth-child(1) > #endpoint\").click()\n",
+    "# Iterate over the elements and get their CSS data\n",
+    "time.sleep(3)  # Wait for 3 seconds\n",
+    "\n",
+    "driver.find_element(By.CSS_SELECTOR, \".ytd-mini-guide-renderer:nth-child(2) > #endpoint\").click()\n",
+    "\n",
+    "time.sleep(3)  # Wait for 3 seconds\n",
+    "driver.find_element(By.CSS_SELECTOR, \".ytd-mini-guide-renderer:nth-child(1) > #endpoint\").click()\n",
+    "\n",
+    "driver.refresh()\n",
+    "\n",
+    "time.sleep(3)  # Wait for 3 seconds\n",
     "driver.execute_script(\"window.scrollTo(0, 1000);\")\n",
     "\n",
     "time.sleep(.5)  # Wait for 3 seconds\n",
@@ -63,15 +100,45 @@
     "time.sleep(.5)  # Wait for 3 seconds\n",
     "driver.execute_script(\"window.scrollTo(0, 100000);\")\n",
     "\n",
+    "time.sleep(.8)  # Wait for 3 seconds\n",
+    "driver.execute_script(\"window.scrollTo(0, 100000);\")\n",
+    "\n",
+    "time.sleep(.8)  # Wait for 3 seconds\n",
+    "driver.execute_script(\"window.scrollTo(0, 100000);\")\n",
+    "\n",
+    "time.sleep(.8)  # Wait for 3 seconds\n",
+    "driver.execute_script(\"window.scrollTo(0, 100000);\")\n",
+    "\n",
+    "time.sleep(.5)  # Wait for 3 seconds\n",
+    "driver.execute_script(\"window.scrollTo(0, 100000);\")\n",
+    "\n",
+    "time.sleep(.8)  # Wait for 3 seconds\n",
+    "driver.execute_script(\"window.scrollTo(0, 200000);\")\n",
+    "\n",
+    "time.sleep(.8)  # Wait for 3 seconds\n",
+    "driver.execute_script(\"window.scrollTo(0, 200000);\")\n",
+    "\n",
+    "time.sleep(.8)  # Wait for 3 seconds\n",
+    "driver.execute_script(\"window.scrollTo(0, 200000);\")\n",
+    "\n",
+    "time.sleep(.8)  # Wait for 3 seconds\n",
+    "driver.execute_script(\"window.scrollTo(0, 200000);\")\n",
+    "\n",
+    "time.sleep(.8)  # Wait for 3 seconds\n",
+    "driver.execute_script(\"window.scrollTo(0, 200000);\")\n",
+    "\n",
+    "time.sleep(.8)  # Wait for 3 seconds\n",
+    "driver.execute_script(\"window.scrollTo(0, 200000);\")\n",
+    "\n",
     "time.sleep(.5)  # Wait for 3 seconds\n",
     "\n",
-    "# Close the driver\n",
-    "\n"
+    "\n",
+    "# Close the driver\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 17,
    "id": "7d14456c-2941-45c5-861b-377ad265cf13",
    "metadata": {
     "collapsed": true,
@@ -85,28 +152,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "188\n"
+      "255\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "elements = driver.find_elements(By.CSS_SELECTOR,\"ytd-rich-grid-row.style-scope > div > ytd-rich-item-renderer> div > ytd-rich-grid-media:nth-child(1) > div:nth-child(1) > div:nth-child(3) \")\n",
+    "\n",
+    "elements = driver.find_elements(By.CSS_SELECTOR,\"ytd-rich-item-renderer.ytd-rich-grid-renderer\")\n",
+    "\n",
     "dataset = []\n",
     "print(len(elements))\n",
     "for element in elements:\n",
     "    # Get the outer HTML of the element\n",
-    "    text = element.text\n",
-    "    text_array = text.splitlines()\n",
-    "\n",
-    "    child_element = element.find_element(By.CSS_SELECTOR,\"div:nth-child(3)  > a\")\n",
-    "    link = child_element.get_attribute('href')\n",
+    "    \n",
     "    try:\n",
-    "        text_array.append(link[25:])\n",
+    "        text = element.text\n",
+    "        text_array = text.splitlines()\n",
+    "\n",
+    "        child_element = element.find_element(By.CSS_SELECTOR,\"* > div:nth-child(1) > ytd-rich-grid-media:nth-child(1) > div:nth-child(1) > div:nth-child(3) > div:nth-child(1) > a:nth-child(1)\")\n",
+    "        link = child_element.get_attribute('href')\n",
+    "        text_array.append(link.rsplit('/', 1)[-1])\n",
     "        dataset.append(text_array)\n",
     "    except:\n",
     "        continue\n",
-    "    "
+    "\n",
+    "\n"
    ]
   },
   {
@@ -196,7 +267,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "imggen",
    "language": "python",
    "name": "python3"
   },
@@ -210,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
